k8s/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml
spec:
  replicas: 1                       # match your HPA minReplicas
  selector:
    matchLabels:
      app: ml
  template:
    metadata:
      labels:
        app: ml
    spec:

      containers:
      - name: ml
        image: prajyotshende/movie-recc-ml-service:latest
        ports:
          - containerPort: 8000
        volumeMounts:
          # Mount only the ml-100k subdir into /app/ml-100k
          - name: data
            mountPath: /app/ml-100k
            subPath: ml-100k
          - name: data  # Add this
            mountPath: /app/model_data
            subPath: model_data

      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
