k8s/kibana.yaml
---
# Kibana Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.8.0
          ports:
            - containerPort: 5601
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1Gi"
---
# Kibana Service
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: NodePort
  ports:
    - port: 5601
      targetPort: 5601
      nodePort: 30007
  selector:
    app: kibana
