k8s/logstash.yaml
---
# Logstash Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  selector:
    matchLabels:
      app: logstash
  replicas: 1
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.8.0
          ports:
            - containerPort: 5044
          volumeMounts:
            - name: logstash-config
              mountPath: /usr/share/logstash/pipeline
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "1Gi"
      volumes:
        - name: logstash-config
          configMap:
            name: logstash-config
---
# Logstash Service
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  ports:
    - port: 5044
      targetPort: 5044
      nodePort: 30008
  selector:
    app: logstash
