k8s/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
spec:
  selector:
    app: ml
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
