k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: movie-recc.com
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: { number: 80 }
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port: { number: 8000 }
          - path: /ml(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ml-service
                port: { number: 8000 }
